force-app/main/default/objects/Contact/fields/About__c.field-meta.xml
<CustomField>
    <fullName>About__c</fullName>
    <label>About</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>