force-app/main/default/objects/Contact/fields/Accomodation_Program__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Program__c</fullName>
    <label>Accomodation Program</label>
    <type>TextArea</type>
</CustomField>