force-app/main/default/objects/Contact/fields/Act_pkg_days__c.field-meta.xml
<CustomField>
    <fullName>Act_pkg_days__c</fullName>
    <label>Act pkg days</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>