force-app/main/default/objects/Contact/fields/Additional_Item_Amount_1_Thai__c.field-meta.xml
<CustomField>
    <fullName>Additional_Item_Amount_1_Thai__c</fullName>
    <label>Additional Item Amount 1 Thai</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>