force-app/main/default/objects/Contact/fields/Age_of_youngest_child__c.field-meta.xml
<CustomField>
    <fullName>Age_of_youngest_child__c</fullName>
    <label>Age of youngest child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>