force-app/main/default/objects/Contact/fields/Allergy_information__c.field-meta.xml
<CustomField>
    <fullName>Allergy_information__c</fullName>
    <label>Allergy information</label>
    <type>TextArea</type>
</CustomField>