force-app/main/default/objects/Contact/fields/Are_you_pregnant_now__c.field-meta.xml
<CustomField>
    <fullName>Are_you_pregnant_now__c</fullName>
    <label>Are you pregnant now?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>