force-app/main/default/objects/Contact/fields/Assitant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assitant_Notes__c</fullName>
    <label>Assitant Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>