force-app/main/default/objects/Contact/fields/Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location__c</fullName>
    <label>Branch Location</label>
    <length>225</length>
    <type>Text</type>
</CustomField>