force-app/main/default/objects/Contact/fields/CRN__c.field-meta.xml
<CustomField>
    <fullName>CRN__c</fullName>
    <label>CRN</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>