force-app/main/default/objects/Contact/fields/Current_bra_size__c.field-meta.xml
<CustomField>
    <fullName>Current_bra_size__c</fullName>
    <label>Current bra size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>