force-app/main/default/objects/Contact/fields/current_medications_being_taken__c.field-meta.xml
<CustomField>
    <fullName>current_medications_being_taken__c</fullName>
    <label>current medications being taken</label>
    <type>TextArea</type>
</CustomField>