force-app/main/default/objects/Contact/fields/Customer_Thaisurgery_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Thaisurgery_Deposit__c</fullName>
    <label>Customer Thaisurgery Deposit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>