force-app/main/default/objects/Contact/fields/Deposit_Currency__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Currency__c</fullName>
    <label>Deposit Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>