force-app/main/default/objects/Contact/fields/Depression_Treatments__c.field-meta.xml
<CustomField>
    <fullName>Depression_Treatments__c</fullName>
    <label>Depression Treatments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>