force-app/main/default/objects/Contact/fields/Desired_bra_size__c.field-meta.xml
<CustomField>
    <fullName>Desired_bra_size__c</fullName>
    <label>Desired bra size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>