force-app/main/default/objects/Contact/fields/Desired_incision__c.field-meta.xml
<CustomField>
    <fullName>Desired_incision__c</fullName>
    <label>Desired incision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armpits</fullName>
            </value>
            <value>
                <fullName>Under Breast Crease</fullName>
            </value>
            <value>
                <fullName>Lower edge of Areola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>