force-app/main/default/objects/Contact/fields/Do_you_have_alcohol_dependancy__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_alcohol_dependancy__c</fullName>
    <label>Do you have alcohol dependancy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>