force-app/main/default/objects/Contact/fields/Do_you_have_any_of_the_following_medical__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_of_the_following_medical__c</fullName>
    <label>Do you have any medical conditions?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heart Disease</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Deep Vein Thrombosis</fullName>
            </value>
            <value>
                <fullName>Cardio-Vascular Accidents</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Bleeding Tendancy</fullName>
            </value>
            <value>
                <fullName>Hyperthyroidism</fullName>
            </value>
            <value>
                <fullName>Adrenal Insufficiency</fullName>
            </value>
            <value>
                <fullName>Hepatitis B</fullName>
            </value>
            <value>
                <fullName>HIV</fullName>
            </value>
            <value>
                <fullName>Keloid Scarring</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>