force-app/main/default/objects/Contact/fields/Ea_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Ea_Customer_Id__c</fullName>
    <label>Ea Customer Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>