force-app/main/default/objects/Contact/fields/Facebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Name__c</fullName>
    <inlineHelpText>Provide your Facebook name.</inlineHelpText>
    <label>Facebook Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>