force-app/main/default/objects/Contact/fields/Facebook_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Profile_URL__c</fullName>
    <inlineHelpText>Provide your Facebook profile link here.</inlineHelpText>
    <label>Facebook Profile URL</label>
    <length>225</length>
    <type>Text</type>
</CustomField>