force-app/main/default/objects/Contact/fields/Family_History_Diseases__c.field-meta.xml
<CustomField>
    <fullName>Family_History_Diseases__c</fullName>
    <label>Family History- Diseases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heart Diseases</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>