force-app/main/default/objects/Contact/fields/Final_Discount_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Discount_Date__c</fullName>
    <label>Final Discount Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>