force-app/main/default/objects/Contact/fields/Final_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Final_Discount_Percent__c</fullName>
    <label>Final Discount Percent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>