force-app/main/default/objects/Contact/fields/Go_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Go_Contact_Id__c</fullName>
    <label>Go Contact Id</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>