force-app/main/default/objects/Contact/fields/Had_a_mammogram__c.field-meta.xml
<CustomField>
    <fullName>Had_a_mammogram__c</fullName>
    <label>Had a mammogram?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>