force-app/main/default/objects/Contact/fields/HIV__c.field-meta.xml
<CustomField>
    <fullName>HIV__c</fullName>
    <label>HIV</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>