force-app/main/default/objects/Contact/fields/Hospital_Balance__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Balance__c</fullName>
    <label>Hospital Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>