force-app/main/default/objects/Contact/fields/If_cancer_was_selected_specify_the_loca__c.field-meta.xml
<CustomField>
    <fullName>If_cancer_was_selected_specify_the_loca__c</fullName>
    <label>If cancer,specify the location body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>