force-app/main/default/objects/Contact/fields/If_YES_please_specify_method__c.field-meta.xml
<CustomField>
    <fullName>If_YES_please_specify_method__c</fullName>
    <label>If YES please specify method</label>
    <type>TextArea</type>
</CustomField>