force-app/main/default/objects/Contact/fields/ime_works_you__c.field-meta.xml
<CustomField>
    <fullName>ime_works_you__c</fullName>
    <label>ime works you</label>
    <length>255</length>
    <type>Text</type>
</CustomField>