force-app/main/default/objects/Contact/fields/Intials__c.field-meta.xml
<CustomField>
    <fullName>Intials__c</fullName>
    <label>Intials</label>
    <length>10</length>
    <type>Text</type>
</CustomField>