force-app/main/default/objects/Contact/fields/Last_breasfed_on_date__c.field-meta.xml
<CustomField>
    <fullName>Last_breasfed_on_date__c</fullName>
    <label>Last breasfed on (date)</label>
    <type>Date</type>
</CustomField>