force-app/main/default/objects/Contact/fields/Passport_Country__c.field-meta.xml
<CustomField>
    <fullName>Passport_Country__c</fullName>
    <label>Passport Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>