force-app/main/default/objects/Contact/fields/Pkg_Accommodation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pkg_Accommodation_Amount__c</fullName>
    <label>Pkg Accommodation Amount</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>