force-app/main/default/objects/Contact/fields/Pkg_Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pkg_Room_Rate__c</fullName>
    <label>Pkg Room Rate</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>