force-app/main/default/objects/Contact/fields/Please_accidents_experienced__c.field-meta.xml
<CustomField>
    <fullName>Please_accidents_experienced__c</fullName>
    <label>Please  accidents  experienced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>