force-app/main/default/objects/Contact/fields/Please_specify_drug_allergies__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_drug_allergies__c</fullName>
    <label>Please specify  drug allergies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>