force-app/main/default/objects/Contact/fields/Please_specify_length_of_pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_length_of_pregnancy__c</fullName>
    <label>Please specify length of pregnancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>