force-app/main/default/objects/Contact/fields/Please_specify_medications__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_medications__c</fullName>
    <label>Please specify medications</label>
    <type>TextArea</type>
</CustomField>