force-app/main/default/objects/Contact/fields/Please_specify_operations_undergone__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_operations_undergone__c</fullName>
    <label>Please specify operations undergone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>