force-app/main/default/objects/Contact/fields/Please_specify_result_patients_over_40__c.field-meta.xml
<CustomField>
    <fullName>Please_specify_result_patients_over_40__c</fullName>
    <label>Please specify result (patients over 40)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>