force-app/main/default/objects/Contact/fields/Pleasecurrent_underlying_diseases__c.field-meta.xml
<CustomField>
    <fullName>Pleasecurrent_underlying_diseases__c</fullName>
    <label>Pleasecurrent underlying diseases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>