force-app/main/default/objects/Contact/fields/Pricelist__c.field-meta.xml
<CustomField>
    <fullName>Pricelist__c</fullName>
    <label>Pricelist</label>
    <length>50</length>
    <type>Text</type>
</CustomField>