force-app/main/default/objects/Contact/fields/Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture__c</fullName>
    <inlineHelpText>Id of the document in Profile pictures folder</inlineHelpText>
    <label>Profile Picture</label>
    <length>18</length>
    <type>Text</type>
</CustomField>