force-app/main/default/objects/Contact/fields/Profile_Picture_Test__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_Test__c</fullName>
    <label>Profile Picture Test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>