force-app/main/default/objects/Contact/fields/Qb_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Qb_Customer_Id__c</fullName>
    <label>Qb Customer Id</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>