force-app/main/default/objects/Contact/fields/questions_during_call__c.field-meta.xml
<CustomField>
    <fullName>questions_during_call__c</fullName>
    <label>questions during call</label>
    <type>TextArea</type>
</CustomField>