force-app/main/default/objects/Contact/fields/Show_On_Home__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Home</label>
    <type>Checkbox</type>
</CustomField>