force-app/main/default/objects/Contact/recordTypes/Dentist.recordType-meta.xml
<RecordType>
    <fullName>Dentist</fullName>
    <active>true</active>
    <label>Dentist</label>
</RecordType>