force-app/main/default/objects/Contact/recordTypes/Personal_Assistant.recordType-meta.xml
<RecordType>
    <fullName>Personal_Assistant</fullName>
    <active>true</active>
    <label>Personal Assistant</label>
</RecordType>