force-app/main/default/objects/Contact/validationRules/AVSFQB__Contact_First_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>AVSFQB__Contact_First_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF( LEN( FirstName ) &gt; 25, true, false)</errorConditionFormula>
    <errorMessage>Length of Contact First Name is too long, please rectify it. (QB Maximum Limit is 25 Chars)</errorMessage>
</ValidationRule>