force-app/main/default/objects/Contact/listViews/Show_on_Community_home.listView-meta.xml
<ListView>
    <fullName>Show_on_Community_home</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_On_Home__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Show on Community home</label>
</ListView>